plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5' apply false
	id 'io.spring.dependency-management' version '1.1.6' apply false
}

repositories {
	mavenCentral()
}

subprojects {
	group = 'com.beautify-project'
	version = '0.0.1-SNAPSHOT'

	apply plugin: 'java'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'

	sourceCompatibility = '17'

	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter-web'

		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'

		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testImplementation 'org.projectlombok:lombok'
		testAnnotationProcessor 'org.projectlombok:lombok'
		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	}

	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}

	repositories {
		mavenCentral()
	}

	test {
		useJUnitPlatform()
	}

	bootJar {
		enabled = false
	}
}

jar {
	enabled = false
}
